<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:paddingVertical="8dp">

    <TextView
        android:id="@+id/modify_habit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/habit_name"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/modify_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_edit"
        android:contentDescription="@string/edit_habit"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/modify_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_delete"
        android:contentDescription="@string/delete_habit"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:tint="#ff0000" />
</LinearLayout>