<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background">

    <!-- Spacer -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_settings"
        style="@style/TextTitle"
        android:layout_marginBottom="24dp" />

    <!-- morning Switch -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morning_notification_title"
                android:textColor="#212121"
                style="@style/TextCaption" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morning_notification_text"
                style="@style/TextBody" />

        </LinearLayout>

        <Switch
            android:id="@+id/morning_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- mid day switch -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habit_notification_title"
                android:textColor="#212121"
                style="@style/TextCaption" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habit_notification_text"
                style="@style/TextBody" />

        </LinearLayout>

        <Switch
            android:id="@+id/midday_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- evening switch -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evening_notification_title"
                android:textColor="#212121"
                style="@style/TextCaption" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evening_notification_text"
                style="@style/TextBody" />

        </LinearLayout>

        <Switch
            android:id="@+id/evening_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- Spacer -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp"/>

    <Button
        style="@style/TextButton"
        android:id="@+id/backButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="← BACK"
        android:textColor="#212121"
        android:backgroundTint="#CED1F8"
        android:layout_marginEnd="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>