<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF0F1">

    <EditText
        android:id="@+id/editHabitName"
        android:autofillHints=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_habit_name"
        android:inputType="text"
        android:textColor="#212121"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:backgroundTint="#CED1F8"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/editHabitValue"
        android:autofillHints=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_habit_value"
        android:inputType="number"
        android:textColor="#212121"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:backgroundTint="#CED1F8"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/editHabitUnits"
        android:autofillHints=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_units"
        android:inputType="text"
        android:textColor="#212121"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:backgroundTint="#CED1F8" />

</LinearLayout>
