<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fillViewport="true"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Home Button -->
<!--        <FrameLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->

<!--            <ImageButton-->
<!--                android:id="@+id/homeButton"-->
<!--                android:layout_width="48dp"-->
<!--                android:layout_height="48dp"-->
<!--                android:layout_gravity="end"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:layout_marginEnd="8dp"-->
<!--                android:background="@drawable/rounded_button"-->
<!--                android:src="@drawable/ic_home_black_24dp"-->
<!--                android:scaleType="centerInside"-->
<!--                android:contentDescription="@string/title_home"/>-->
<!--        </FrameLayout>-->

        <!-- Prompt Title -->
        <TextView
            android:id="@+id/text_journal_prompt"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="60dp"
            android:text="@string/journal_prompt_text"
            android:textColor="#212121"/>

        <!-- Prompt for Journal Reflection -->
        <TextView
            android:id="@+id/prompt_journal"
            style="@style/TextBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/journal_prompt"
            android:textColor="#212121"/>

        <!-- Spacer -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp"/>

        <!-- Prompt Options -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal"
            android:alignmentMode="alignMargins"
            android:useDefaultMargins="true"
            android:gravity="center">

            <Button
                android:id="@+id/yes_btn"
                style="@style/TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:text="@string/yes_btn"
                android:textColor="#212121"
                android:backgroundTint="@color/button" />

            <Button
                android:id="@+id/no_btn"
                style="@style/TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:text="@string/no_btn"
                android:textColor="#212121"
                android:backgroundTint="@color/button" />
        </GridLayout>
    </LinearLayout>
</ScrollView>
