<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp">

    <TextView
        android:id="@+id/label_habit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="#ECD2E0"
        android:gravity="center"
        android:text="@string/new_habit"
        android:textColor="#000000"
        android:textSize="16sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginEnd="12dp"
        android:labelFor="@id/input_habit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/input_habit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/input_habit"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:textSize="16sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginEnd="8dp"
        android:saveEnabled="false"
        app:layout_constraintTop_toTopOf="@id/label_habit"
        app:layout_constraintBottom_toBottomOf="@id/label_habit"
        app:layout_constraintStart_toEndOf="@id/label_habit"
        app:layout_constraintEnd_toStartOf="@id/plus_button" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:text="@string/increment"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="#212121"
        android:backgroundTint="#CED1F8"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@id/input_habit"
        app:layout_constraintBottom_toBottomOf="@id/input_habit"
        app:layout_constraintStart_toEndOf="@id/input_habit"
        app:layout_constraintEnd_toStartOf="@id/unit_habit" />

    <TextView
        android:id="@+id/unit_habit"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:text="@string/unit"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toTopOf="@id/input_habit"
        app:layout_constraintBottom_toBottomOf="@id/input_habit"
        app:layout_constraintStart_toEndOf="@id/plus_button"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
